<resources>
    <string name="app_name">Micropulease</string>
    <string name="title_activity_settings">Settings</string>

    <string name="p1_name_label">Player 1 Name</string>
    <string name="p2_type_label">Opponent Type</string>
    <string name="p2_name_label">Player 2 Name</string>
    <string name="renderer_label">Theme</string>
    <string name="start_game_label">Start Game!</string>

    <string name="p1_default_name">Player 1</string>
    <string name="p2_default_name">Player 2</string>

    <string name="hotseat_name">Hot Seat</string>
    <string name="hotseat_descr">2-player with a friend, handing each other the device between turns.</string>

    <string name="solitaire_name">Solitaire</string>
    <string name="solitaire_descr">Play to beat your personal high score.</string>

    <string name="dumbbot_name">DumbBot 1.0</string>
    <string name="dumbbot_descr">The dumbest possible bot: draws a tile if it must, then makes the first legal move it finds.</string>

    <string name="optibot_name">OptiBot 0</string>
    <string name="optibot_descr">Draws a tile if it can; then makes the move which increases its score the most.</string>

    <string name="optibot2_name">OptiBot II</string>
    <string name="optibot2_descr">Like OptiBot 0, but a little smarter about groups.</string>

    <string name="bw_renderer_name">Red Dot</string>
    <string name="carthaginian1_renderer_name">Carthaginian 1</string>
    <string name="classic_renderer_name">Classic</string>
    <string name="stick_mud_renderer_name">Archinerd\'s Stick/Mud Farmer</string>
    <string name="stick_mud2_renderer_name">Archinerd\'s Stick/Mud Farmer 2</string>

    <string name="solitaire_sub_beginner_title">What happened!?</string>
    <string name="solitaire_beginner_title">Beginner!</string>
    <string name="solitaire_normal_title">Normal!</string>
    <string name="solitaire_advanced_title">Advanced!</string>
    <string name="solitaire_expert_title">EXPERT!</string>
    <string name="solitaire_master_title">* * * MASTER * * *</string>

    <string name="solitaire_msg">Your final score is %1$d, earning you the title of %2$s</string>
    <string name="solitaire_sub_beginner">...not quite Beginner.  What happened!?</string>
    <string name="solitaire_beginner">Beginner.</string>
    <string name="solitaire_normal">Normal.</string>
    <string name="solitaire_advanced">Advanced!</string>
    <string name="solitaire_expert">EXPERT!  You are awesome!</string>
    <string name="solitaire_master">MASTER!!  Congratulations!</string>

    <string-array name="renderer_names">
        <item>@string/classic_renderer_name</item>
        <item>@string/bw_renderer_name</item>
        <item>@string/carthaginian1_renderer_name</item>
        <item>@string/stick_mud_renderer_name</item>
        <item>@string/stick_mud2_renderer_name</item>
    </string-array>

    <string name="pref_sound_set_label">Sound Set</string>
    <string-array name="sound_set_ids">
        <item>none</item>
        <item>freesound1</item>
    </string-array>
    <string-array name="sound_set_labels">
        <item>None</item>
        <item>Freesound I</item>
    </string-array>
    <string name="pref_sound_set_dflt">freesound1</string>

    <string name="pref_bot_sleep_label">Bot Sleep Time</string>
    <string-array name="bot_sleep_values">
        <item>0</item>
        <item>500</item>
        <item>1000</item>
        <item>1500</item>
        <item>2000</item>
        <item>3000</item>
        <item>5000</item>
    </string-array>
    <string-array name="bot_sleep_labels">
        <item>None</item>
        <item>0.5 seconds</item>
        <item>1 second</item>
        <item>1.5 seconds</item>
        <item>2 seconds</item>
        <item>3 seconds</item>
        <item>5 seconds</item>
    </string-array>
    <string name="pref_bot_sleep_dflt">1500</string>

    <string name="switch_player_title">Swap Device</string>
    <!--
    1 - other player's name
    -->
    <string name="switch_player_message">I\'m totally %1$s.</string>
    <string name="switch_player_ok">Yep!</string>

    <string name="game_over_tie_title">Tie Game!</string>
    <!--
    1 - final score
    -->
    <string name="game_over_tie_message">Both players tie with %1$d points!</string>

    <!--
    1 - winning player's name
    -->
    <string name="game_over_title">%1$s Wins!</string>
    <!--
    1 - winning player's name
    2 - winning player's score
    3 - losing player's name
    4 - losing player's score
    -->
    <string name="game_over_message">%1$s wins with %2$d points; %3$s has %4$d points!</string>

    <string name="confirm_exit_title">Exit game?</string>
    <string name="confirm_exit_message">Are you sure you want to exit?</string>
    <string name="confirm_exit_yes">Yep!</string>
    <string name="confirm_exit_cancel">No, never mind!</string>

    <!--
    1 - conceding player's name
    -->
    <string name="concede_title">%1$s Concedes!</string>
    <!--
    1 - conceding player's name
    -->
    <string name="concede_message">%1$s concedes the game.</string>
    <!--
    1 - conceding player's name
    2 - reason
    -->
    <string name="concede_reason_message">%1$s concedes the game.  Reason: %2$s</string>
    <string name="concede_ok">OK!</string>

    <!--
    1 - your name
    2 - number of tiles in hand
    3 - number of tiles in supply
    4 - number of stones remaining
    5 - score
    -->
    <string name="you_status">You: %2$d in hand, %3$d in supply, %4$d stones, %5$d points</string>
    <!--
    1 - opponent name
    2 - number of tiles in hand
    3 - number of tiles in supply
    4 - number of stones remaining
    5 - score
    -->
    <string name="opponent_status">%1$s: %2$d in hand, %3$d in supply, %4$d stones, %5$d points</string>
    <!--
    1 - your name
    -->
    <string name="your_turn_status">%1$s\'s turn.</string>
    <!--
    1 - their name
    -->
    <string name="their_turn_status">Waiting for %1$s.</string>

    <!--
    1 - tiles remaining in core
    -->
    <string name="core_remaining">Core: %1$d</string>

    <string name="leader_high_scores_label">High Scores</string>
    <string name="leader_beatdowns_label">Worst Beatdowns</string>
    <string name="leader_solitaire_label">Solitaire High Scores</string>
    <string name="leader_personal_label">Personal Best</string>
    <string name="leader_no_high_scores">No high scores yet!</string>

</resources>
