<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:key="PREF_RENDERER"
        android:title="@string/renderer_label"
        android:entries="@array/renderer_names"
        android:entryValues="@array/renderer_names"
        android:defaultValue="@string/classic_renderer_name"/>

    <ListPreference
        android:key="PREF_SOUND"
        android:title="@string/pref_sound_set_label"
        android:entries="@array/sound_set_labels"
        android:entryValues="@array/sound_set_ids"
        android:defaultValue="@string/pref_sound_set_dflt"/>

    <ListPreference
        android:key="PREF_BOT_SLEEP"
        android:title="@string/pref_bot_sleep_label"
        android:entries="@array/bot_sleep_labels"
        android:entryValues="@array/bot_sleep_values"
        android:defaultValue="@string/pref_bot_sleep_dflt"/>

    </PreferenceScreen>
