<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".StartGameActivity">

    <!--  ARGHHH ANDROID LAYOUT SUCKS SO MUCH I just want this goddamn image to
          fill the width of the screen, and to be as tall as necessary to make
          that happen.  My options seem to be A) specify the height and have the
          width be wrong, or B) use wrap_content, and have it appear at the
          right width, but have a bunch of dead space above & below the image.
          WTF!!  So I'm hard-coding the height, which seems like totally the
          wrong approach.  -->
    <ImageView
        android:id="@+id/titleImage"
        android:layout_width="wrap_content"
        android:layout_height="115dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="100"/>

    <TextView
        android:id="@+id/p1NameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/p1_name_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleImage"/>

    <EditText
        android:id="@+id/nameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/p1_default_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/p1NameLabel"
        app:layout_constraintTop_toBottomOf="@+id/titleImage"/>

    <TextView
        android:id="@+id/p2TypeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/p2_type_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameText"/>

    <Spinner
        android:id="@+id/p2TypeSpinner"
        android:layout_width="0dp"
        android:layout_height="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/p2TypeLabel"
        app:layout_constraintTop_toBottomOf="@+id/nameText"/>

    <EditText
        android:id="@+id/p2TypeDescr"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:clickable="false"
        android:ems="10"
        android:enabled="false"
        android:focusableInTouchMode="false"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/p2TypeSpinner"/>

    <TextView
        android:id="@+id/p2NameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/p2_name_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/p2TypeDescr"/>

    <EditText
        android:id="@+id/p2NameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/p2_default_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/p2NameLabel"
        app:layout_constraintTop_toBottomOf="@+id/p2TypeDescr"/>

    <Spinner
        android:id="@+id/themeSpinner"
        android:layout_width="0dp"
        android:layout_height="21dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/themeLabel"
        app:layout_constraintTop_toBottomOf="@+id/p2NameText"/>

    <TextView
        android:id="@+id/themeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/renderer_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/p2NameText"/>

    <ImageView
        android:id="@+id/themeSample"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/startGame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/themeSpinner"
        />

    <ImageButton
        android:id="@+id/helpButton"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginLeft="4dp"
        android:onClick="openHelp"
        app:layout_constraintBottom_toBottomOf="@+id/startGame"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/startGame"
        app:srcCompat="@android:drawable/ic_menu_help"/>

    <Button
        android:id="@+id/startGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:onClick="doStartGame"
        android:text="@string/start_game_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

</android.support.constraint.ConstraintLayout>